Update and rename 2017-01-01-welcome-to-millennial.md to 2021-10-30-get-ready.md

--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -1,15 +1,17 @@
 ---
 layout: post
-title: "Welcome to Millennial!"
-author: "Paul Le"
-categories: documentation
-tags: [documentation,sample]
-image: Banner_fondo_blanco.jpeg
+title: "Get Ready!"
+author: "ArturoS"
+categories: get-ready
+tags: [pre-event,documentation]
+image: 
 ---
 
-Millennial is a minimalist Jekyll theme. The purpose of this theme is to provide a simple, clean, content-focused blogging platform for your personal site or blog. Below you can find everything you need to get started.
+XXX
+XXX
+XXX
 
-## Getting Started
+## Getting Ready
 
 [Getting Started]({{ site.github.url }}{% post_url 2016-10-10-getting-started %}): getting started with installing Millennial, whether you are completely new to using Jekyll, or simply just migrating to a new Jekyll theme.
 
