--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -8,3 +8,10 @@ image: Banner_5_logoEditathon-02-01.png
 ---
 
 ## Getting Ready
+
+
+---
+
+## License
+
+Open sourced under the [MIT license](https://github.com/edithaton/page/LICENSE.md).
