--- a/_posts/2022-01-01-soon.md
+++ b/_posts/2022-01-01-soon.md
@@ -6,7 +6,14 @@ categories: facts
 tags: [sample]
 image: page-release-date.png
 ---
- 
+
 # Soon! / Pronto!
 
 ## November 6th / 6 de noviembre
+
+
+---
+
+## License
+
+Open sourced under the [MIT license](https://github.com/edithaton/page/LICENSE.md).
