--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Get Ready!"
+title: "Get Ready! / Prepárate!"
 author: "ArturoS"
 categories: get-ready
 tags: [pre-event,documentation]
