--- a/_posts/2022-01-01-soon.md
+++ b/_posts/2022-01-01-soon.md
@@ -7,10 +7,22 @@ tags: [sample]
 image: page-release-date.png
 ---
 
-# Soon! / Pronto!
 
-## November 6th / 6 de noviembre
+¡Amig@s! **¿eres editor/a de Wikipedia?** Pues del 16 al 19 de noviembre tendremos un Editathon Online desde las Americas y Europa. Diseñado por organizaciones internacionales para mejorar la accesibilidad en temas de Salud y Nutrición humana. ¡Tendremos expertos en los temas, premios y certificación por tu esfuerzo!. Sigue los links en el poster y regístrate. Y en caso que no lo tengas, crea desde ya tu cuenta en [discord.com](discord.com) y [zoom.us](zoom.us)
 
+*¡Gracias por unirte a este proyecto!*
+
+---
+
+Hi there! **Are you a Wikipedia editor?** Well, from November 16 to 19, we will have an Online Editathon from the Americas and Europe. Designed by international organisations to improve accessibility in matters of Health and Human Nutrition. We will have experts on the topics, awards and certification for your effort! Follow the links on the flyer and register. And in case you don't have it yet, go and get your account at [discord.com](discord.com) and [zoom.us](zoom.us)
+
+*Thanks for joining this project!*
+
+ ---
+
+ ## License
+
+ Open sourced under the [MIT license](https://github.com/edithaton/page/LICENSE.md).
 
 ---
 
