--- a/_posts/2021-11-16-welcome.md
+++ b/_posts/2021-11-16-welcome.md
@@ -3,7 +3,7 @@ layout: post
 title: "Welcome / Bienvenid@"
 author: "ArturoS"
 categories: facts
-tags: [sample]
+tags: [welcome,about,event]
 image: page-release-date.png
 ---
 
@@ -19,12 +19,6 @@ Hi there! **Are you a Wikipedia editor?** Well, from November 16 to 19, we will 
 *Thanks for joining this project!*
 
  ---
-
- ## License
-
- Open sourced under the [MIT license](https://github.com/edithaton/page/LICENSE.md).
-
----
 
 ## License
 
