--- a/_posts/2021-11-16-welcome.md
+++ b/_posts/2021-11-16-welcome.md
@@ -4,7 +4,7 @@ title: "Welcome / Bienvenid@"
 author: "ArturoS"
 categories: facts
 tags: [welcome,about,event]
-image: page-release-date.png
+image: Banner_5_logoEditathon-02-01.png
 ---
 
 
