--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -4,7 +4,7 @@ title: "Get Ready! / Prepárate!"
 author: "ArturoS"
 categories: get-ready
 tags: [pre-event,documentation]
-image: Banner_4-01_logo-01
+image: Banner_4-01_logo-01.png
 ---
 
 ## Getting Ready
