--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "Get Ready! / Prepárate!"
-author: "ArturoS"
-categories: get-ready
-tags: [pre-event,documentation]
+author: "Arturos"
+categories: documentation
+tags: [documentation,sample]
 image: Banner_4-01_logo-01.png
 ---
 
