--- a/_posts/2021-11-16-welcome.md
+++ b/_posts/2021-11-16-welcome.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Welcome / Bienvenid@"
 author: "ArturoS"
-categories: facts
+categories: welcome
 tags: [welcome,about,event]
 image: Banner_5_logoEditathon-02-01.png
 ---
