--- a/_posts/2021-11-16-welcome.md
+++ b/_posts/2021-11-16-welcome.md
@@ -7,6 +7,12 @@ tags: [welcome,about,event]
 image: Banner_5_logoEditathon-02-01.png
 ---
 
+## What is the idea?
+We plan to host an online Editathon where members of the diverse chapters, together with academic and editors’ communities, can review, modify and enhance current Wikipedia pages related to subjects in the field of human nutrition and related subjects.
+
+Such activity will be enhanced by the presence and guidance of experts and postgraduate students.
+
+---
 
 ¡Amig@s! **¿eres editor/a de Wikipedia?** Pues del 16 al 19 de noviembre tendremos un Editathon Online desde las Americas y Europa. Diseñado por organizaciones internacionales para mejorar la accesibilidad en temas de Salud y Nutrición humana. ¡Tendremos expertos en los temas, premios y certificación por tu esfuerzo!. Sigue los links en el poster y regístrate. Y en caso que no lo tengas, crea desde ya tu cuenta en [discord.com](discord.com) y [zoom.us](zoom.us)
 
