--- a/_posts/2021-11-16-welcome.md
+++ b/_posts/2021-11-16-welcome.md
@@ -3,7 +3,7 @@ layout: post
 title: "Welcome / Bienvenid@"
 author: "ArturoS"
 categories: welcome
-tags: [welcome,about,event]
+tags: [welcome,about]
 image: Banner_5_logoEditathon-02-01.png
 ---
 
