--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -2,8 +2,8 @@
 layout: post
 title: "Get Ready! / Prepárate!"
 author: "Arturos"
-categories: documentation
-tags: [documentation,sample]
+categories: resources
+tags: [resources,docs]
 image: Banner_4-01_logo-01.png
 ---
 
