--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -7,8 +7,7 @@ tags: [resources,docs]
 image: Banner_4-01_logo-01.png
 ---
 
-## Getting Ready
-
+[![poster-cc-ve](assets/img/EDITATHON_2021-English-2sessions.png)](.)
 
 ---
 
