--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -11,6 +11,11 @@ image: Banner_4-01_logo-01.png
 
 ---
 
+[![poster-cc-ve](assets/img/EDITATHON_2021-Espanol-2sessions.png)](.)
+
+
+---
+
 ## License
 
 Open sourced under the [MIT license](https://github.com/edithaton/page/LICENSE.md).
