--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -7,11 +7,15 @@ tags: [resources,docs]
 image: Banner_4-01_logo-01.png
 ---
 
-[![poster-cc-ve](assets/img/EDITATHON_2021-English-2sessions.png)](.)
+## Poster in English
+
+[![poster-cc-ve](assets/img/POSTER_EDITATHON_2021-English.png)](.)
 
 ---
 
-[![poster-cc-ve](assets/img/EDITATHON_2021-Espanol-2sesiones.png)](.)
+## Poster en Español
+
+[![poster-cc-ve](assets/img/POSTER_EDITATHON_2021-Espanol.png)](.)
 
 
 ---
