adding welcome videos w/ captions

--- a/_posts/2021-11-16-welcome.md
+++ b/_posts/2021-11-16-welcome.md
@@ -7,15 +7,20 @@ tags: [welcome,about]
 image: Banner_5_logoEditathon-02-01.png
 ---
 
-¡Amig@s! **¿eres editor/a de Wikipedia?** Pues del 16 al 19 de noviembre tendremos un Editathon Online desde las Americas y Europa. Diseñado por organizaciones internacionales para mejorar la accesibilidad en temas de Salud y Nutrición humana. ¡Tendremos expertos en los temas, premios y certificación por tu esfuerzo!. Sigue los links en el poster y regístrate. Y en caso que no lo tengas, crea desde ya tu cuenta en [discord.com](discord.com) y [zoom.us](zoom.us)
+Hi there! **Are you a Wikipedia editor?** Well, from November 16 to 19, we will have an Online Editathon from the Americas and Europe. Designed by international organisations to improve accessibility in matters of Health and Human Nutrition. We will have experts on the topics, awards and certification for your effort! Follow the links on the flyer and register. And in case you don't have it yet, go and get your account at [discord.com](discord.com) and [zoom.us](zoom.us)
 
-*¡Gracias por unirte a este proyecto!*
+<iframe width="100%" height="322" src="https://www.youtube.com/embed/_uxlxNPLhKQ?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+*Thanks for joining this project!*
 
 ---
 
-Hi there! **Are you a Wikipedia editor?** Well, from November 16 to 19, we will have an Online Editathon from the Americas and Europe. Designed by international organisations to improve accessibility in matters of Health and Human Nutrition. We will have experts on the topics, awards and certification for your effort! Follow the links on the flyer and register. And in case you don't have it yet, go and get your account at [discord.com](discord.com) and [zoom.us](zoom.us)
+¡Amig@s! **¿eres editor/a de Wikipedia?** Pues del 16 al 19 de noviembre tendremos un Editathon Online desde las Americas y Europa. Diseñado por organizaciones internacionales para mejorar la accesibilidad en temas de Salud y Nutrición humana. ¡Tendremos expertos en los temas, premios y certificación por tu esfuerzo!. Sigue los links en el poster y regístrate. Y en caso que no lo tengas, crea desde ya tu cuenta en [discord.com](discord.com) y [zoom.us](zoom.us)
 
-*Thanks for joining this project!*
+<iframe width="100%" height="322" src="https://www.youtube.com/embed/Q-9c73J-UPc?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+*¡Gracias por unirte a este proyecto!*
 
 ---
 
