--- a/_posts/2021-10-01-about-us.md
+++ b/_posts/2021-10-01-about-us.md
@@ -11,9 +11,9 @@ image: Banner_1-01_color-01_logo-01.png
 An online Editathon where members of the diverse chapters, together with academic and editors’ communities, can review, modify and enhance current Wikipedia pages related to subjects in the field of human nutrition and related subjects.
 
 | <h3>logo</h3> | <h2><b>Organiser</b></h2> |
-| :---:        |          :---: |
+|    :---:      |           :---:           |
 | [![PIN](assets/img/pin-logo.jpeg)]() | the Program in International Nutrition in the Division of Nutritional Sciences |
-| [![CC-VE]()]() | Creative Commons Venezuela Chapter |
+| [![CC-VE](assets/img/cc-ve-logo.jpeg)]() | Creative Commons Venezuela Chapter |
 ---
 ---
 
