--- a/_posts/2021-10-01-about-us.md
+++ b/_posts/2021-10-01-about-us.md
@@ -10,9 +10,9 @@ image: Banner_1-01_color-01_logo-01.png
 ## What is the idea?
 An online Editathon where members of the diverse chapters, together with academic and editors’ communities, can review, modify and enhance current Wikipedia pages related to subjects in the field of human nutrition and related subjects.
 
-| <h3><b>the Program in International Nutrition in the Division of Nutritional Sciences</b></h3> | <h3><b>Creative Commons Venezuela Chapter</b></h3> |
+| **the Program in International Nutrition in the Division of Nutritional Sciences** | **Creative Commons Venezuela Chapter** |
 |    :---:      |           :---:           |
-| [![PIN](assets/img/pin-logo.jpeg)]() | [![CC-VE](assets/img/cc-ve-logo.jpeg)]() |
+| <img src="assets/img/pin-logo.jpeg" style="width:250px;"> | <img src="assets/img/cc-ve-logo.jpeg" style="width:250px;"> |
 
 ---
 
