--- a/_posts/2021-10-01-about-us.md
+++ b/_posts/2021-10-01-about-us.md
@@ -12,8 +12,7 @@ image: Banner_1-01_color-01_logo-01.png
 | **the Program in International Nutrition in the Division of Nutritional Sciences** | **Creative Commons Venezuela Chapter** |
 |    :---:      |           :---:           |
 | <img src="assets/img/pin-logo.jpeg" style="width:250px;"> | <img src="assets/img/cc-ve-logo.jpeg" style="width:250px;"> |
-| What is the idea? An online Editathon where members of the diverse chapters, together with academic and editors’ communities, can review, modify and enhance current Wikipedia pages related to subjects in the field of human nutrition and related subjects. | ¿Cuál es la idea?
-Un Editathon en línea donde los miembros de los diversos capítulos, junto con las comunidades académicas y de editores, pueden revisar, modificar y mejorar páginas actuales de Wikipedia relacionadas con temas en el campo de la nutrición humana y temas relacionados. |
+| What is the idea? An online Editathon where members of the diverse chapters, together with academic and editors’ communities, can review, modify and enhance current Wikipedia pages related to subjects in the field of human nutrition and related subjects. | ¿Cuál es la idea? Un Editathon en línea donde los miembros de los diversos capítulos, junto con las comunidades académicas y de editores, pueden revisar, modificar y mejorar páginas actuales de Wikipedia relacionadas con temas en el campo de la nutrición humana y temas relacionados. |
 
 ---
 
