--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -7,6 +7,14 @@ tags: [resources,docs]
 image: Banner_4-01_logo-01.png
 ---
 
+# Get your / Obten tu
+
+* [Zoom](../zoom)**
+* [Discord](../discord)
+* [Wikipedia](https://en.wikipedia.org/w/index.php?title=Special:CreateAccount&returnto=Wikipedia:New+account)
+
+---
+
 ## Poster in English
 
 [![poster-cc-ve](assets/img/POSTER_EDITATHON_2021-English.png)](.)
