style page get ready

--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -9,9 +9,9 @@ image: Banner_4-01_logo-01.png
 
 # Get your / Obten tu
 
-* [Zoom](../zoom)**
-* [Discord](../discord)
-* [Wikipedia](https://en.wikipedia.org/w/index.php?title=Special:CreateAccount&returnto=Wikipedia:New+account)
+* **[Zoom](../zoom)**
+* **[Discord](../discord)**
+* **[Wikipedia](https://en.wikipedia.org/w/index.php?title=Special:CreateAccount&returnto=Wikipedia:New+account)**
 
 ---
 
