--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Get Ready! / Prepárate!"
-author: "Arturos"
+author: "ArturoS"
 categories: resources
 tags: [resources,docs]
 image: Banner_4-01_logo-01.png
