tasks page and more style

--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -4,7 +4,7 @@ title: "Get Ready! / Prepárate!"
 author: "ArturoS"
 categories: resources
 tags: [resources,docs]
-image: Banner_4-01_logo-01.png
+image: Banner_1-01_color-01_logo-01.png
 ---
 
 # Get your / Obten tu
