--- a/_posts/2021-10-01-about-us.md
+++ b/_posts/2021-10-01-about-us.md
@@ -4,7 +4,7 @@ title: "About us / Acerca de nosotros"
 author: "ArturoS"
 categories: about
 tags: [about,contact]
-image: Banner_1-01_color-01_logo-01.png
+image: Banner_4-01_logo-01.png
 ---
 
 # Organisers and teams
