--- a/_posts/2021-10-20-tasks.md
+++ b/_posts/2021-10-20-tasks.md
@@ -4,7 +4,7 @@ title: "Tasks / Tareas"
 author: "ArturoS"
 categories: resources
 tags: [resources,docs]
-image: Banner_4-01_logo-01.png
+image: Banner_3-01_logo-01-01-01-01.png
 ---
 
 # suggested / sugeridas
