tasks and references

--- a/_posts/2021-10-20-tasks.md
+++ b/_posts/2021-10-20-tasks.md
@@ -12,15 +12,31 @@ To execute during the event :)
 **/**
 A realizar durante el evento :)
 
-*
+* **1)** **Scan articles**, looking for WHO references or lack thereof
+* **2)**  **Translating**: if a page is only available in one language, translate the wiki (you can use the Wikipedia translation tool).
+* **3)** If an article does not exist on a certain topic and there is a guideline available on ***Cochrane library***, ***Elena***, or ***Cornell summer course***, you can create a wiki about it.
 
 ---
 
-<CENTER>
+* **1)** **Escanear artículos**, buscando referencias de la OMS o falta de ellas
+* **2)** **Traducción**: si una página solo está disponible en un idioma, traduzca la wiki (puede usar la herramienta de traducción de Wikipedia).
+* **3)** Si no existe un artículo sobre un tema determinado y hay una guía disponible en ***biblioteca Cochrane***, ***Elena*** o en los ***curso de verano de Cornell***, puede crear una wiki acerca de ello.
 
-**Section Under Construction**!!
+---
 
-</CENTER>
+## References Bank / Banco de Referencias
+
+
+***Section Under Construction***
+
+
+|  **References**  |  **Site**  |
+|      :---:       |   :---:    |
+| Elena | https://www.who.int/elena/en/ |
+| ... | ... |
+| ... | ... |
+| ... | ... |
+| ... | ... |
 
 ---
 
