--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -7,11 +7,17 @@ tags: [resources,docs]
 image: Banner_1-01_color-01_logo-01.png
 ---
 
-# Get your / Obten tu
+## Get your account in / Obten tu cuenta en
 
 * **[Zoom](../page/zoom)**
 * **[Discord](../page/discord)**
 * **[Wikipedia](https://en.wikipedia.org/w/index.php?title=Special:CreateAccount&returnto=Wikipedia:New+account)**
+
+## **&**
+
+* Check the **[Tasks](../page/tasks)** if you want to start to explore the wikis and our references bank!
+
+* Visita **[Tareas](../page/tasks)** si quieres comenzar a explorar desde ya the wikis y nuestro banco de referencias!
 
 ---
 
