--- a/_posts/2021-10-20-tasks.md
+++ b/_posts/2021-10-20-tasks.md
@@ -32,10 +32,10 @@ A realizar durante el evento :)
 
 |  **References**  |  **Site**  |
 |      :---:       |   :---:    |
-| Elena | https://www.who.int/elena/en/ |
-| ... | ... |
-| ... | ... |
-| ... | ... |
+| ***Elena*** | [https://www.who.int/elena/en/](https://www.who.int/elena/en/) |
+| ***iris "Essential Nutrition Actions"*** | [https://apps.who.int/iris/](https://apps.who.int/iris/)  & [http://apps.who.int/iris/bitstream/handle/10665/](http://apps.who.int/iris/bitstream/handle/10665/84409/9789241505550_eng.pdf?sequence=1)|
+| ***Cochrane Library*** | [https://www.cochranelibrary.com/](https://www.cochranelibrary.com/) |
+| ***WHO publications*** | [https://www.who.int/publications/](https://www.who.int/publications/i/item/9789241515856) |
 | ... | ... |
 
 ---
