--- a/_posts/2021-10-20-tasks.md
+++ b/_posts/2021-10-20-tasks.md
@@ -8,29 +8,44 @@ image: Banner_3-01_logo-01-01-01-01.png
 ---
 
 # suggested / sugeridas
-To execute during the event :)
+
+**To execute during the event :)**
+
 **/**
-A realizar durante el evento :)
+
+**A realizar durante el evento :)**
+
+<br>
 
 * **1)** **Scan articles**, looking for WHO references or lack thereof
+
 * **2)**  **Translating**: if a page is only available in one language, translate the wiki (you can use the Wikipedia translation tool).
+
 * **3)** If an article does not exist on a certain topic and there is a guideline available on ***Cochrane library***, ***Elena***, or ***Cornell summer course***, you can create a wiki about it.
+
 * **4)** You are invited to enhance any article inside the topics of the editathon. To give you sone starting point, please, review our selection **[here](https://docs.google.com/spreadsheets/d/1qsYZn7k_yM5APEsuYGQLFkHOIP7CND2lysNB92W7p_o/edit?usp=sharing)**
 
+<br>
+
 ---
+
+<br>
 
 * **1)** **Revisar artículos**, buscando referencias de la OMS o falta de ellas
+
 * **2)** **Traducción**: si una página solo está disponible en un idioma, traduzca la wiki (puede usar la herramienta de traducción de Wikipedia).
+
 * **3)** Si no existe un artículo sobre un tema determinado y hay una guía disponible en ***biblioteca Cochrane***, ***Elena*** o en los ***curso de verano de Cornell***, puede crear una wiki acerca de ello.
+
 * **4)** Estás invitad@ a mejorar cualquier artículo dentro del contexto de los temas de este editatón. Para empezar, puedes, por favor, ver estos ejemplos seleccionados **[acá](https://docs.google.com/spreadsheets/d/1qsYZn7k_yM5APEsuYGQLFkHOIP7CND2lysNB92W7p_o/edit?usp=sharing)**
+
+<br>
 
 ---
 
+<br>
+
 ## References Bank / Banco de Referencias
-
-
-***Section Under Construction***
-
 
 |  **References**  |  **Site**  |
 |      :---:       |   :---:    |
