--- a/_posts/2021-10-20-tasks.md
+++ b/_posts/2021-10-20-tasks.md
@@ -9,11 +9,7 @@ image: Banner_3-01_logo-01-01-01-01.png
 
 # suggested / sugeridas
 
-**To execute during the event :)**
-
-**/**
-
-**A realizar durante el evento :)**
+**To execute during the event :)  /  A realizar durante el evento :)**
 
 <br>
 
@@ -46,7 +42,7 @@ image: Banner_3-01_logo-01-01-01-01.png
 <br>
 
 ## References Bank / Banco de Referencias
-
+<br>
 |  **References**  |  **Site**  |
 |      :---:       |   :---:    |
 | ***Elena*** | [https://www.who.int/elena/en/](https://www.who.int/elena/en/) |
@@ -54,6 +50,8 @@ image: Banner_3-01_logo-01-01-01-01.png
 | ***Cochrane Library*** | [https://www.cochranelibrary.com/](https://www.cochranelibrary.com/) |
 | ***WHO publications*** | [https://www.who.int/publications/](https://www.who.int/publications/i/item/9789241515856) |
 | ... | ... |
+
+<br>
 
 ---
 
