--- a/_posts/2021-10-30-get-ready.md
+++ b/_posts/2021-10-30-get-ready.md
@@ -17,7 +17,7 @@ image: Banner_1-01_color-01_logo-01.png
 
 * Check the **[Tasks](../page/tasks)** if you want to start to explore the wikis and our references bank!
 
-* Visita **[Tareas](../page/tasks)** si quieres comenzar a explorar desde ya the wikis y nuestro banco de referencias!
+* Visita las **[Tareas](../page/tasks)** si quieres comenzar a explorar desde ya the wikis y nuestro banco de referencias!
 
 ---
 
