the Program in International Nutrition

--- a/_posts/2021-10-01-about-us.md
+++ b/_posts/2021-10-01-about-us.md
@@ -16,9 +16,10 @@ image: Banner_4-01_logo-01.png
 | <img src="assets/img/pin-logo.jpeg" style="width:75%;"> | <img src="assets/img/cc-ve-logo.jpeg" style="width:75%;"> |
 | What is the idea? An online Editathon where members of the diverse chapters, together with academic and editors’ communities, can review, modify and enhance current Wikipedia pages related to subjects in the field of human nutrition and related subjects. | ¿Cuál es la idea? Un Editathon en línea donde los miembros de los diversos capítulos, junto con las comunidades académicas y de editores, pueden revisar, modificar y mejorar páginas actuales de Wikipedia relacionadas con temas en el campo de la nutrición humana y temas relacionados. |
 
-* [PIN Website](https://www.human.cornell.edu/dns/research/centers/PIN)
-* [PIN Email](PINdirector@cornell.edu)
-* [PIN Twitter](https://twitter.com/Cornell_PIN?s=20)
+## More about the Program in International Nutrition
+### * [PIN Website](https://www.human.cornell.edu/dns/research/centers/PIN)
+### * [PIN Email](PINdirector@cornell.edu)
+### * [PIN Twitter](https://twitter.com/Cornell_PIN?s=20)
 
 ---
 
