adding table witj 50 articles

--- a/_posts/2021-10-20-tasks.md
+++ b/_posts/2021-10-20-tasks.md
@@ -21,6 +21,13 @@ image: Banner_3-01_logo-01-01-01-01.png
 
 * **4)** You are invited to enhance any article inside the topics of the editathon. To give you sone starting point, please, review our selection **[here](https://docs.google.com/spreadsheets/d/1qsYZn7k_yM5APEsuYGQLFkHOIP7CND2lysNB92W7p_o/edit?usp=sharing)**
 
+---
+
+* **NEWS** Please find the **50** articles mentioned and more in the table **[here](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)**
+
+Or click the image :) below
+[![poster-cc-ve](assets/img//table-of-wikis.png)](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)
+
 <br>
 
 ---
@@ -34,6 +41,16 @@ image: Banner_3-01_logo-01-01-01-01.png
 * **3)** Si no existe un artículo sobre un tema determinado y hay una guía disponible en ***biblioteca Cochrane***, ***Elena*** o en los ***curso de verano de Cornell***, puede crear una wiki acerca de ello.
 
 * **4)** Estás invitad@ a mejorar cualquier artículo dentro del contexto de los temas de este editatón. Para empezar, puedes, por favor, ver estos ejemplos seleccionados **[acá](https://docs.google.com/spreadsheets/d/1qsYZn7k_yM5APEsuYGQLFkHOIP7CND2lysNB92W7p_o/edit?usp=sharing)**
+
+
+---
+
+* **NUEVO** Consigue acá los **50** artículos mencionados, y todos los demás en las tablas **[aquí](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)**
+
+O has click en imagen :) abajo
+[![poster-cc-ve](assets/img//table-of-wikis.png)](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)
+
+
 
 <br>
 
