adding dashboard wikipedia

--- a/_posts/2021-11-16-tasks.md
+++ b/_posts/2021-11-16-tasks.md
@@ -13,6 +13,10 @@ image: Banner_3-01_logo-01-01-01-01.png
 
 <br>
 
+See our progress clicking the pic / Sigue nuestro progreso acá [![dashboard](assets/img//dashboard-wikis-2021.png)](https://outreachdashboard.wmflabs.org/courses/Creative_Commons_Venezuela/Editathon_to_improve_health_knowledge/)
+
+<br>
+
 * **1)** **Scan articles**, looking for WHO references or lack thereof
 
 * **2)**  **Translating**: if a page is only available in one language, translate the wiki (you can use the Wikipedia translation tool).
@@ -26,7 +30,7 @@ image: Banner_3-01_logo-01-01-01-01.png
 * **NEWS** Please find the **50** articles mentioned and more in the table **[here](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)**
 
 Or click the image :) below
-[![poster-cc-ve](assets/img//table-of-wikis.png)](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)
+[![tasks](assets/img//table-of-wikis.png)](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)
 
 <br>
 
@@ -48,7 +52,7 @@ Or click the image :) below
 * **NUEVO** Consigue acá los **50** artículos mencionados, y todos los demás en las tablas **[aquí](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)**
 
 O has click en imagen :) abajo
-[![poster-cc-ve](assets/img//table-of-wikis.png)](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)
+[![tasks](assets/img//table-of-wikis.png)](https://docs.google.com/spreadsheets/d/1aPWfV6qT4PRX-1fh7LhJWv9phO1w-1EzA0H2QSJoifk/edit#gid=2131348224)
 
 
 
